Hisotry CSV download button added Added preventDefault to the mailto address styled the header of the monitorsPage to reduce the spacing

--- a/src/pages/MonitorsPage/Monitors/MonitorsPage.scss
+++ b/src/pages/MonitorsPage/Monitors/MonitorsPage.scss
@@ -7,7 +7,6 @@
   display: flex;
   padding-top: 5rem;
   background: #d5d6e9;
-  // height: 55rem;
   border: none;
 
   @media screen and(max-width:800px) {
@@ -64,10 +63,10 @@
   font-size: 1.8rem;
   border-radius: 6px;
   font-weight: bold;
-  
-   @media screen and (max-width: 1200px) {
-    margin-right: 10px; }
-  
+
+  @media screen and (max-width: 1200px) {
+    margin-right: 10px;
+  }
 
   .monitorHeader {
     background: #090c9b;
@@ -104,7 +103,8 @@
   font-weight: bold;
   border-radius: 6px;
   @media screen and (max-width: 1200px) {
-    margin-right: 10px; }
+    margin-right: 10px;
+  }
 
   .functionalHeader {
     display: flex;
@@ -142,7 +142,8 @@
   font-weight: bold;
   border-radius: 6px;
   @media screen and (max-width: 1200px) {
-    margin-right: 10px; }
+    margin-right: 10px;
+  }
 
   .nonFuncHeader {
     display: flex;
