--- a/src/pages/MonitorsPage/Sensors.style.scss
+++ b/src/pages/MonitorsPage/Sensors.style.scss
@@ -17,7 +17,7 @@ $border-color: #0db4e9;
 
 .sensorChart {
   background: #d5d6e9;
-  height: 100%;
+  height: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
